feat: demo2说他爱吃苹果

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h1>红烧茄子</h1>
     <h2>小炒肉</h2>
     <h1>腊肉</h1>
-    <h1>我是demo2</h1>
+    <div>
+    	<h1>我是demo2</h1>
+    	<span>我爱吃苹果</span>
+    </div>
+
 </body>
 </html>
