feat: demo2说他爱吃香蕉和西瓜

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div>
     	<h1>我是demo2</h1>
     	<span>我爱吃苹果</span>
+    	<span>我爱吃香蕉</span>
+    	<span>我爱吃西瓜</span>
     </div>
 
 </body>
