--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
     	<h1>我还是单身</h1>
     	<h1>我是穷小子</h1>
     </div>
+    <script type="text/javascript">
+       
+    </script>
 </body>
 </html>
